--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -203,6 +203,7 @@ a {
   background-color: var(--clr-backgroundBtn-color);
   padding: 0.5rem 2rem;
   border-radius: 0.8rem;
+  /* margin: 0 auto; */
 }
 .linkmenu:hover {
   opacity: 0.8;
@@ -376,6 +377,133 @@ button {
 .cartImg {
   height: 8rem;
 }
+
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4.5rem;
+  padding: 3rem;
+  margin: 5rem auto;
+}
+.orderContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  padding: 2rem;
+}
+.orderItem {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.orderTitle {
+  font-size: 3rem;
+  text-decoration: underline var(--clr-primary-header-color);
+  text-align: center;
+  margin-top: 2rem;
+}
+.itemTitle {
+  font-size: 2rem;
+  font-weight: 500;
+}
+.orderItem {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.review {
+  background: white;
+  padding: 1.5rem 2rem;
+  border-radius: var(--radius);
+  box-shadow: var(--light-shadow);
+  transition: var(--transition);
+  text-align: center;
+}
+
+.img-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-bottom: 1.5rem;
+}
+.person-img {
+  width: 100%;
+  display: block;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  position: relative;
+}
+.quote-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  transform: translateY(25%);
+  background: rgb(212, 122, 59);
+  color: white;
+}
+.img-container::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgb(212, 122, 59);
+  position: absolute;
+  top: -0.25rem;
+  right: -0.5rem;
+  border-radius: 50%;
+}
+
+.w-500px {
+  width: 100%;
+  max-width: 500px;
+  background-color: var(--clr-primary-header-color);
+  border: none;
+  border-radius: 6px;
+  height: 55px;
+  margin: 5rem auto;
+  color: white;
+  text-align: center;
+  line-height: 55px;
+  font-size: 1.8rem;
+}
+.form {
+  margin: 1rem;
+  padding: 1rem;
+}
+.touches {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  padding: 1rem;
+  margin: 1rem;
+}
+.mapResponsive {
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  /* padding-bottom: 42.25%; */
+  position: relative;
+  height: 0;
+}
+.mapResponsive iframe {
+  left: 0;
+  top: 0;
+  border: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
 @media screen and (min-width: 336px) {
   h2 {
     font-size: 2.4rem;
@@ -462,6 +590,13 @@ button {
     border: 0.1rem solid var(--clr-secondary-header-color);
     background-color: transparent;
     padding: 0.2rem;
+  }
+  .input {
+    width: 100%;
+    margin-bottom: 1rem;
+    border: 0.1rem solid var(--clr-secondary-header-color);
+    border-radius: 0.2rem;
+    font-weight: 100;
   }
 }
 @media screen and (min-width: 786px) {
@@ -558,6 +693,31 @@ button {
     font-size: 1rem;
     border-radius: 0.2rem;
   }
+  .input {
+    font-weight: 100;
+    font-size: 1.6rem;
+  }
+  .x {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    margin: 1rem;
+    gap: 1rem;
+  }
+  .y {
+    width: 70%;
+  }
+  .orderContainer {
+    width: 30%;
+  }
+  .form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -619,6 +779,10 @@ button {
   }
   .footericon {
     font-size: 2.7rem;
+  }
+  .input {
+    font-weight: lighter;
+    font-size: 2rem;
   }
 }
 @media screen and (min-width: 1200px) {
